# vio_data_simulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/viosim/: common.h  imu.h  param.h  utility.h
main/: gener_alldata.cpp
python/: GeometryLib.py  draw_points.py  draw_trajcory.py  transformations.py
src/: imu.cpp  param.h
src/viosim/: imu.cpp  param.cpp  utility.cpp
utils/: generate_data.cpp  generate_static_data.cpp
